force-app/main/default/objects/smartlists__Context__c/smartlists__Context__c.object-meta.xml
<CustomObject>
    <label>Context</label>
    <nameField>
        <displayFormat>CX-{00000000}</displayFormat>
        <label>Context Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Context</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>