force-app/main/default/objects/smartlists__Context__c/fields/smartlists__Data_Provider_Class__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Data_Provider_Class__c</fullName>
    <label>Data Provider Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>