force-app/main/default/objects/smartlists__Context__c/fields/smartlists__Data_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Data_Source_Type__c</fullName>
    <label>Data Source Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>