force-app/main/default/objects/smartlists__Context__c/fields/smartlists__List_ID__c.field-meta.xml
<CustomField>
    <fullName>smartlists__List_ID__c</fullName>
    <externalId>true</externalId>
    <label>List ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>