force-app/main/default/objects/smartlists__Context__c/fields/smartlists__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>