force-app/main/default/objects/smartlists__Context__c/fields/smartlists__Parent_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Parent_Id_Field__c</fullName>
    <label>Parent Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>