force-app/main/default/objects/smartlists__Context__c/fields/smartlists__Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Parent_Object__c</fullName>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>