force-app/main/default/objects/smartlists__Context__c/fields/smartlists__Query_Fields__c.field-meta.xml
<CustomField>
    <fullName>smartlists__Query_Fields__c</fullName>
    <label>Query Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>